--- a/app/src/main/res/layout/activity_second_task.xml
+++ b/app/src/main/res/layout/activity_second_task.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -14,37 +14,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="textPersonName"
-        android:inputType="textPersonName"/>
+        android:inputType="textPersonName" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="phone"
-        android:inputType="phone"/>
+        android:inputType="phone" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="number"
-        android:inputType="number"/>
+        android:inputType="number" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="textPassword"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="textWebEmailAddress"
-        android:inputType="textWebEmailAddress"/>
+        android:inputType="textWebEmailAddress" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="time"
-        android:text="time"/>
+        android:text="time" />
 
     <CalendarView
         android:layout_width="match_parent"
